# dbrichler_projects

assessments/ur_health/: Dockerfile
assessments/ur_health/init/: 15_schema_setup.sh
assessments/ur_health/seeds/: raw_claims_trx_part1.csv  raw_claims_trx_part3.csv
assessments/ursa/: .dockerignore  docker-compose.yml  pyproject.toml
assessments/ursa/init/: 15_schema_setup.sh  20_seed_from_csv.sh
assessments/ursa/seeds/: raw_claims_trx_part3.csv
finance/: price_correlation.ipynb
finance/data/: Gasoline RBOB Futures Historical Data.csv  JETS Historical Data.csv
weather_data/: .env  .env_example  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  package-lock.yml  packages.yml  pyproject.toml
weather_data/ingestion/api/: __init__.py  request.py
weather_data/ingestion/processing/: current_weather.py  historical_weather.py  weather.py  weather_scrap.py
weather_data/ingestion/schema/: base.py  weather.py
weather_data/init/: 20_weather_setup.sh
weather_data/models/: sources.yml
weather_data/models/base/: patients_base.sql  schema.yml  staff_base.sql  staff_schedule_base.sql
weather_data/profiles/: .user.yml  profiles.yml
weather_data/utils/: databases.py  util.py
