# dbt_sigma_poc/pyproject.toml

[project]
name = "dbt-sigma-poc"
version = "0.1.0"
description = "Poetry environment for dbt with Postgres adapter"
authors = [{ name = "Danny Brichler", email = "daniel.brichler@leaflink.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "dbt-postgres==1.9.0",
  "dbt-core==1.9.1",
  "requests (>=2.32.5,<3.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

